--- a/docker/README
+++ b/docker/README
@@ -1,10 +1,19 @@
-69884  docker build -t conll-validator .
-69885  docker run -ti -p 5000:5000 conll-validator
+To build:
+
+docker build -t conll-validator .
+
+To run locally:
+
+docker run -ti -p 5000:5000 conll-validator
 
 To test it, submit a CONLL file via curl as follows:
 
 curl -F "file=@CP9.conllu" -F "lang=pt_bosque" http://localhost:5000/validate-ud
 
+(this will execute the "official" validator tool from Universal Dependencies)
+
 and
 
 curl -F "file=@CP9.conllu" -F "lang=pt_bosque" http://localhost:5000/validate
+
+(this will execute the CL-CONLLU validation routine)
