--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 A series of tools for manipulating CONLL-U files; validator web service, editor.
+
+If want to test it out, you can use:
+
+ttp://conll-validator.mybluemix.net/form
