updating README with references

--- a/dep_search-docker/README
+++ b/dep_search-docker/README
@@ -1,3 +1,8 @@
+Container to execute University of Turku's dep_search tool:
+
+- https://github.com/fginter/dep_search
+- https://github.com/fginter/dep_search_serve
+
 To build:
 
 docker build -t dep-search .
